test/unit-tests/errors/test-timeout-error.spec.d.ts
export declare class TestTimeoutErrorTests {
    shouldStoreMessage(timeout: number): void;
}
